todo-project/todo-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: todo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-volume
          persistentVolumeClaim:
            claimName: todo-pvc
      containers:
        - name: todo-app
          image: zanaad/todo-app:latest
          volumeMounts:
            - name: todo-volume
              mountPath: /var/lib/data
          ports:
          - containerPort: 3000
